# carbu-bill

./: .gitignore  README.md  compose.yaml  dockerfile  justfile  pyproject.toml
.github/workflows/: docker-build.yml
carbu/: __init__.py
carbu/static/js/: site.js
carbu/templates/: base.html  download.html  index.html  wait.html
typst-templates/: default.json  facture.typ
