[project]
name = "carbu"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacques Supcik",email = "jacques@supcik.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
ruff = "^0.14.11"

